force-app/main/default/objects/Panel_Test__c/Panel_Test__c.object-meta.xml
<CustomObject>
    <label>Panel Test</label>
    <nameField>
        <displayFormat>PTR - {000000000}</displayFormat>
        <label>Panel Test ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panel Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>