force-app/main/default/objects/Panel_Test__c/fields/Check_For_Results__c.field-meta.xml
<CustomField>
    <fullName>Check_For_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check For Results</label>
    <type>Checkbox</type>
</CustomField>