force-app/main/default/objects/Panel_Test__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel</label>
    <referenceTo>Panel__c</referenceTo>
    <relationshipName>Panel_Analytes</relationshipName>
    <type>Lookup</type>
</CustomField>