force-app/main/default/objects/Panel_Test__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test</label>
    <referenceTo>Test__c</referenceTo>
    <relationshipLabel>Panel Tests</relationshipLabel>
    <relationshipName>Panel_Analytes</relationshipName>
    <type>Lookup</type>
</CustomField>