force-app/main/default/objects/Panel_Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_For_Results__c</columns>
    <columns>Panel__c</columns>
    <columns>Test__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>